# TraceForge

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: traceforge_API_SPEC_v4.md  traceforge_DESIGN_SPEC_v1.md  traceforge_ERD_v4.md  traceforge_PRD_v4.md  traceforge_SDD_v4.md  traceforge_SRD_v4.md  traceforge_SRS_v4.md  traceforge_WIREFRAME_SPEC_v1.md
docs/implementation/: FINAL_RELEASE_REPORT.md  QA_REPORT.md  team-board.md
docs/implementation/logs/: 001-baseline-team-allocation.md  002-core-frontend-desktop-implementation.md  003-qa-and-completion.md  004-native-build-and-native-core.md  005-github-repository-release-cicd.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/api/: commands.ts  types.ts
src/core/: defaults.ts  redaction.test.ts  redaction.ts  report.test.ts  report.ts  repository.ts  snapshot.ts  watch.test.ts  watch.ts
src/views/: Dashboard.test.tsx  Dashboard.tsx  Onboarding.tsx  PrivacyPreview.tsx  Reports.tsx  Settings.tsx  WatchPaths.tsx
