[package]
name = "traceforge"
version = "0.1.0"
description = "TraceForge — AI Work Evidence Recorder"
authors = ["TraceForge Team"]
edition = "2021"

[lib]
name = "traceforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
